<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E16C63"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="70dp"
        android:onClick="goToMainActivity"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout4" />

    <TextView
        android:id="@+id/settings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="140dp"
        android:background="#000000"
        android:fontFamily="sans-serif-black"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/objectType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="276dp"
        android:background="#000000"
        android:fontFamily="sans-serif-thin"
        android:text="@string/object_type"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_textView" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectType_textView">

        <RadioGroup
            android:id="@+id/radioGroupObjects"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rectangle_rButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/rectangle" />

            <RadioButton
                android:id="@+id/triangle_rButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/triangle" />

            <RadioButton
                android:id="@+id/star_rButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/star" />

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/objectSize_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="280dp"
        android:background="#000000"
        android:fontFamily="sans-serif-thin"
        android:text="@string/object_size"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectSize_textView">

        <RadioGroup
            android:id="@+id/radioGroupSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/small_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/medium_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/large_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/large" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/direction_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="212dp"
        android:background="#000000"
        android:fontFamily="sans-serif-thin"
        android:text="@string/rotation_direction"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_textView">

        <RadioGroup
            android:id="@+id/radioGroupDirection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/right_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/right" />

            <RadioButton
                android:id="@+id/left_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/left" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/speed_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="236dp"
        android:background="#000000"
        android:fontFamily="sans-serif-thin"
        android:text="@string/rotation_speed"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="410dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_textView">

        <RadioGroup
            android:id="@+id/radioGroupSpeed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/slow_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/slow" />

            <RadioButton
                android:id="@+id/normal_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/fast_rButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setRotatingObject"
                android:text="@string/fast" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>